# dq-doctor

./: .dqdoctor.yml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  dict.md  pyproject.toml  report_dirty_orders.html  report_dirty_users.html  rules.yml  schema.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  config.md  custom-sql-rules.md  dirty-demo.md  exporters.md  limitations.md  postgres-mysql.md  quickstart.md
dqdoctor/: cli.py  config.py  correlation.py  custom_rules.py  dashboard.py  demo.py  drift.py  fk_discovery.py  lineage.py  models.py  pii_detector.py  profiler.py  ref_integrity.py  reporter.py  rule_engine.py  sql_rules.py  validator.py
dqdoctor/connectors/: auto.py  duckdb.py
dqdoctor/data/: seed.sql
dqdoctor/exporters/: dbt.py  deequ.py  gx.py  markdown.py  soda.py
dqdoctor/llm/: client.py
dqdoctor/providers/: airflow.py
dqdoctor/templates/: report.html
examples/dirty-demo/: .dqdoctor.yml  README.md
examples/ecommerce/: dirty_seed.sql
examples/mysql-demo/: README.md  docker-compose.yml  seed.sql
examples/postgres-demo/: README.md  docker-compose.yml  seed.sql
tests/: test_auto.py  test_cli.py  test_demo.py  test_exporters.py  test_llm.py  test_models.py  test_new_features.py  test_profiler.py  test_reporter.py  test_rule_engine.py  test_v04.py  test_validator.py
