[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dq-doctor"
version = "0.4.0"
description = "A lightweight data quality checkup CLI — no YAML, no rule syntax to remember."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "pugyy" }]
keywords = ["data-quality", "cli", "duckdb", "profiling", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "duckdb>=1.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/pugyy/dq-doctor"

[project.scripts]
dqdoctor = "dqdoctor.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
sql = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
]
llm = [
    "openai>=1.0",
]
dashboard = [
    "flask>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dqdoctor"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
