[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dq-doctor"
version = "0.7.1"
description = "One command to profile tables, generate data quality checks, and catch dirty data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "pugyy" }]
keywords = [
    "data-quality",
    "data-profiling",
    "cli",
    "duckdb",
    "profiling",
    "validation",
    "dbt",
    "great-expectations",
    "soda",
    "pii-detection",
    "referential-integrity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "duckdb>=1.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/pugyy/dq-doctor"
Repository = "https://github.com/pugyy/dq-doctor"
Issues = "https://github.com/pugyy/dq-doctor/issues"
Changelog = "https://github.com/pugyy/dq-doctor#changelog"

[project.scripts]
dqdoctor = "dqdoctor.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
sql = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
]
llm = [
    "openai>=1.0",
]
dashboard = [
    "flask>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dqdoctor"]
artifacts = [
    "dqdoctor/templates/*.html",
    "dqdoctor/data/*.sql",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "dqdoctor/templates/*.html",
    "dqdoctor/data/*.sql",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dqdoctor --cov-report=term-missing"
